Kubernates_manifests/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend 
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 137068224361.dkr.ecr.eu-west-2.amazonaws.com/nti/reactapp:frontend
        ports:
        - containerPort: 3000
---


apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80        
      targetPort: 3000 
  type: ClusterIP
